// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`minimal > uminimalThreeNodeReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      439.9978067746205,
      399.5811286353502,
      100,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      439.9912273389938,
      399.16230320466576,
      100,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      439.9802624146293,
      398.7435696368749,
      100,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`minimal > uminimalThreeNodeReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`node_specific > ulinesThroughPointReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      240,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      639.9868406477228,
      397.48677181210104,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      160.0131593522771,
      402.5132281878989,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      640.5104298535351,
      447.48403028037666,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      639.4632514419105,
      347.4895133438254,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      589.9895821794472,
      398.01036101791334,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      689.9840991159984,
      396.96318260628874,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      159.48957014646484,
      352.5159697196233,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      160.53674855808939,
      452.5104866561745,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      210.01041782055273,
      401.98963898208666,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      110.01590088400151,
      403.03681739371115,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      240,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      639.9473640339629,
      394.9738192279943,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      160.05263596603706,
      405.0261807720057,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      640.9944850281307,
      444.96285340173654,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      638.9002430397951,
      344.98478505425203,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      589.9583298602206,
      396.02094022216215,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      689.9363982077052,
      393.9266982338264,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      159.00551497186922,
      355.03714659826346,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      161.0997569602049,
      455.01521494574797,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      210.04167013977934,
      403.9790597778379,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      110.06360179229478,
      406.07330176617353,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      240,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      639.8815744877755,
      392.4614178212492,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      160.1184255122244,
      407.53858217875074,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      641.452112441682,
      442.4367458395358,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      638.3110365338691,
      342.4860898029626,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      589.9062464694889,
      394.0319557751556,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      689.8569025060622,
      390.8908798673428,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      158.547887558318,
      357.56325416046417,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      161.68896346613082,
      457.5139101970373,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      210.09375353051098,
      405.96804422484433,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      110.14309749393783,
      409.10912013265715,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`node_specific > ulinesThroughPointReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`node_specific > upolygonReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9983550696911,
      399.37168434022965,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      339.4566851421977,
      296.3925339271874,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      340.544959788111,
      504.23578173258295,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "closePath",
  },
  {
    "args": [],
    "kind": "method",
    "name": "fill",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9934203238614,
      398.7433859060505,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      338.9150301099555,
      296.71095675952677,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      341.09154956618306,
      504.5456573344227,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "closePath",
  },
  {
    "args": [],
    "kind": "method",
    "name": "fill",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9851958977993,
      398.11512192258147,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      338.3750497530196,
      297.03221131316263,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      341.6397543491811,
      504.8526667642558,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "closePath",
  },
  {
    "args": [],
    "kind": "method",
    "name": "fill",
  },
]
`;

exports[`node_specific > upolygonReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`value_array > uarrayMixedValuesReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`value_array > uarrayMixedValuesReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`value_array > uarrayReferenceReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9934203238614,
      398.7433859060505,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      398.7433859060505,
      280.0065796761386,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      280.0065796761386,
      401.25661409394945,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      401.2566140939495,
      519.9934203238614,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9736820169815,
      397.48690961399717,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      397.48690961399717,
      280.02631798301854,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      280.02631798301854,
      402.5130903860028,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      402.5130903860028,
      519.9736820169815,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9407872438877,
      396.23070891062457,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      396.23070891062457,
      280.05921275611223,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      280.05921275611223,
      403.7692910893753,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      403.7692910893753,
      519.9407872438877,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`value_array > uarrayReferenceReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`value_array > uarrayStaticValuesReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`value_array > uarrayStaticValuesReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`minimal uminimalThreeNodeReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.09999451693655122,
      0.0010471784116245794,
      100,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.09997806834748456,
      0.002094241988335696,
      100,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.09995065603657316,
      0.0031410759078128294,
      100,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`minimal uminimalThreeNodeReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`node_specific upolygonReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.299995887674228,
      0.0015707891494258742,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      -0.15135828714450575,
      0.25901866518203154,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      -0.14863760052972247,
      -0.26058945433145725,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "closePath",
  },
  {
    "args": [],
    "kind": "method",
    "name": "fill",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.2999835508096536,
      0.003141535234873738,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      -0.1527124247251113,
      0.25822260810118314,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      -0.14727112608454232,
      -0.2613641433360568,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "closePath",
  },
  {
    "args": [],
    "kind": "method",
    "name": "fill",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.29996298974449814,
      0.004712195193546202,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      -0.15406237561745093,
      0.2574194717170934,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      -0.14590061412704727,
      -0.2621316669106395,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "closePath",
  },
  {
    "args": [],
    "kind": "method",
    "name": "fill",
  },
]
`;

exports[`node_specific upolygonReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`node_specific ulinesThroughPointReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0,
      0,
      240,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.5999671016193072,
      0.006283070469747476,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -0.5999671016193072,
      -0.0062830704697472775,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      1.1235563074315946,
      50.00354153874535,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      0.07637789580701992,
      -49.990975397805855,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -49.3972913666563,
      0.5298722762820379,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      50.59722556989491,
      -0.5173061353425429,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -1.1235563074315784,
      -50.00354153874535,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      -0.07637789580703602,
      49.990975397805855,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      49.3972913666563,
      -0.5298722762820105,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      -50.59722556989491,
      0.5173061353425159,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0,
      0,
      240,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.5998684100849073,
      0.012565451930014177,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -0.5998684100849073,
      -0.01256545193001412,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      1.6469894042527535,
      50.00159962567229,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      -0.447252584082939,
      -49.97646872181226,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -49.38916576365737,
      1.0596864460978637,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      50.588902583827185,
      -1.0345555422378352,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -1.6469894042527486,
      -50.00159962567229,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      0.4472525840829341,
      49.97646872181226,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      49.38916576365737,
      -1.0596864460978472,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      -50.588902583827185,
      1.0345555422378192,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0,
      0,
      240,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.599703936219439,
      0.018846455446876974,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -0.599703936219439,
      -0.018846455446876794,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      2.170241890125853,
      49.99417447373346,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      -0.970834017686975,
      -49.956481562839706,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -49.37562408206714,
      1.5893844093532936,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      50.575031954506024,
      -1.5516914984595396,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -2.1702418901258365,
      -49.99417447373346,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      0.9708340176869585,
      49.956481562839706,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      49.37562408206714,
      -1.5893844093532887,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      -50.575031954506024,
      1.5516914984595351,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`node_specific ulinesThroughPointReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`value_array uarrayMixedValuesReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0,
      0,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0,
      0,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0,
      0,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`value_array uarrayMixedValuesReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`value_array uarrayStaticValuesReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.2,
      0.2,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.5,
      0.5,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.8,
      0.2,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.2,
      0.2,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.5,
      0.5,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.8,
      0.2,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.2,
      0.2,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.5,
      0.5,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.8,
      0.2,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`value_array uarrayStaticValuesReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`value_array uarrayReferenceReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.2999835508096536,
      0.003141535234873738,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -0.003141535234873724,
      0.2999835508096536,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -0.2999835508096536,
      -0.0031415352348736388,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.0031415352348737537,
      -0.2999835508096536,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.29993420504245366,
      0.006282725965007088,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -0.006282725965007078,
      0.29993420504245366,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -0.29993420504245366,
      -0.00628272596500706,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.006282725965006908,
      -0.29993420504245366,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.2998519681097195,
      0.009423227723438487,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -0.009423227723438484,
      0.2998519681097195,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      -0.2998519681097195,
      -0.009423227723438397,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      0.00942322772343838,
      -0.2998519681097195,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`value_array uarrayReferenceReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;
